added basic HTML

--- a/index.html
+++ b/index.html
@@ -7,8 +7,26 @@
     <title>World-Clock Bello</title>
 </head>
 <body>
+
+    <div class="container">
     <h1>Bello's World-Clock</h1>
 
+    <select id="timeZone">
+        
+<option value="">select a city</option>
+<option value="">Pretoria</option>
+<option value="">Paris</option>
+<option value="">Tokyo</option>
+<option value="">Sydney</option>
+<option value="">Los Angeles</option>
+
+    </select>
+<div class="city">
+<h2>New York</h2>
+<div class="date"> July 16 2024</div>
+<div class="time"> 08:45:15 AM</div>
+</div>
+</div>
    <footer>coded by CM Modiselle(Bello) <a href="blank"> this project is hosted on Gidhub</a></footer> 
 <script src="javascript/script.js"></script>
 </body>
