added some changes in css

--- a/index.html
+++ b/index.html
@@ -20,14 +20,27 @@
 <option value="">Sydney</option>
 <option value="">Los Angeles</option>
 
+
     </select>
 <div class="city">
+    <div>
 <h2>New York</h2>
 <div class="date"> July 16 2024</div>
-<div class="time"> 08:45:15 AM</div>
+</div>
+<div class="time"> 08:45:15 <small>AM</small></div>
+</div>
+
+<br>
+
+<div class="city">
+    <div>
+    <h2>Mexico</h2>
+<div class="date"> July 16 2024</div>
+</div>
+<div class="time"> 08:45:15  <small>AM</small></div>
 </div>
 </div>
-   <footer>coded by CM Modiselle(Bello) <a href="blank"> this project is hosted on Gidhub</a></footer> 
+   <footer>coded by <strong>CM Modiselle(Bello)</strong> <a href="blank"> this project is hosted on Gidhub</a></footer> 
 <script src="javascript/script.js"></script>
 </body>
 </html>
