added JS with current timezone

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.45/moment-timezone-with-data-1970-2030.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>World-Clock Bello</title>
 </head>
@@ -14,7 +17,7 @@
     <select id="timeZone">
         
 <option value="">select a city</option>
-<option value="">Pretoria</option>
+<option value="">Mexico</option>
 <option value="">Paris</option>
 <option value="">Tokyo</option>
 <option value="">Sydney</option>
@@ -22,22 +25,22 @@
 
 
     </select>
-<div class="city">
+<div class="city" id="new-york">
     <div>
 <h2>New York</h2>
-<div class="date"> July 16 2024</div>
+<div class="date"></div>
 </div>
-<div class="time"> 08:45:15 <small>AM</small></div>
+<div class="time"></div>
 </div>
 
 <br>
 
-<div class="city">
+<div class="city" id="pretoria">
     <div>
-    <h2>Mexico</h2>
-<div class="date"> July 16 2024</div>
+    <h2 >Pretoria</h2>
+<div class="date"></div>
 </div>
-<div class="time"> 08:45:15  <small>AM</small></div>
+<div class="time"></div>
 </div>
 </div>
    <footer>coded by <strong>CM Modiselle(Bello)</strong> <a href="blank"> this project is hosted on Gidhub</a></footer> 
