--- a/index.html
+++ b/index.html
@@ -14,20 +14,19 @@
     <div class="container">
     <h1>Bello's World-Clock</h1>
 
-    <select id="timeZone">
+    <select id="city">
         
 <option value="">select a city</option>
-<option value="">Mexico</option>
-<option value="">Paris</option>
-<option value="">Tokyo</option>
-<option value="">Sydney</option>
-<option value="">Los Angeles</option>
+<option value="Europe/Paris">Paris</option>
+<option value="Asia/Tokyo">Tokyo</option>
+<option value="Australia/Sydney">Sydney</option>
 
 
     </select>
-<div class="city" id="new-york">
+    <div id="cities">
+<div class="city" id="pacific">
     <div>
-<h2>New York</h2>
+<h2>Pacific</h2>
 <div class="date"></div>
 </div>
 <div class="time"></div>
@@ -35,15 +34,16 @@
 
 <br>
 
-<div class="city" id="pretoria">
+<div class="city" id="johannesburg">
     <div>
-    <h2 >Pretoria</h2>
+    <h2 >Johannesburg</h2>
 <div class="date"></div>
 </div>
 <div class="time"></div>
 </div>
 </div>
-   <footer>coded by <strong>CM Modiselle(Bello)</strong> <a href="blank"> this project is hosted on Gidhub</a></footer> 
+</div>
+<footer>coded by <strong>CM Modiselle(Bello)</strong> <a href="blank"> this project is hosted on Gidhub</a></footer> 
 <script src="javascript/script.js"></script>
 </body>
 </html>
