updated cerrent location

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <select id="city">
         
 <option value="">select a city</option>
-<option value="Europe/Paris">Paris</option>
+<option value="current">My location</option>
 <option value="Asia/Tokyo">Tokyo</option>
 <option value="Australia/Sydney">Sydney</option>
 
