--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@
     <title>World-Clock Bello</title>
 </head>
 <body>
-
-    <div class="container">
+     <div class="container">
     <h1>Bello's World-Clock</h1>
 
     <select id="city">
         
 <option value="">select a city</option>
 <option value="current">My location</option>
+<option value="Europe/Paris">Paris</option>
 <option value="Asia/Tokyo">Tokyo</option>
 <option value="Australia/Sydney">Sydney</option>
+
+<p><a href="https://world-clock-bello.netlify.app/"> All Cities</p></a>
+
 
 
     </select>
