added css on h1

--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
 </div>
 </div>
 
-<p><a href="https://world-clock-bello.netlify.app/"> All Cities</p></a>
 
 </div>
-<footer>coded by <strong>CM Modiselle(Bello)</strong> <a href="blank"> this project is hosted on Gidhub</a></footer> 
+<footer>coded by <a href="https://github.com/dashboard"><strong>CM Modiselle(Bello)</strong></a>  this project is hosted on <a href="https://github.com/">Github</a></footer> 
 <script src="javascript/script.js"></script>
 </body>
 </html>
